<resources>
  <string name="app_name">Fuel Log</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="hint_refueling_date">Refueling date</string>
  <string name="hint_current_odometer">Current odometer</string>
  <string name="hint_fuel_unit_price">Fuel unit price</string>
  <string name="hint_fuel_volume">Fuel volume</string>
  <string name="hint_fuel_total_cost">Total cost</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="log_Fragment">logs</string>
</resources>
