<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_refueling_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/input_refueling_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_refueling_date" />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_below="@id/input_layout_refueling_date"
      android:id="@+id/input_layout_current_odometer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/input_current_odometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_current_odometer" />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_below="@id/input_layout_current_odometer"
      android:id="@+id/input_layout_fuel_volume"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/input_fuel_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fuel_volume" />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_below="@id/input_layout_fuel_volume"
      android:id="@+id/input_layout_fuel_unit_price"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/input_fuel_unit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fuel_unit_price" />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_below="@id/input_layout_fuel_unit_price"
      android:id="@+id/input_layout_fuel_total_cost"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/input_fuel_total_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fuel_total_cost" />
  </android.support.design.widget.TextInputLayout>
</RelativeLayout>